--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -1,21 +1,25 @@
 <% provide(:title, "Home") %>
-
-<input id="pac-input" class="controls" type="text"
-    placeholder="Enter a location">
-<div id="type-selector" class="controls">
-  <input type="radio" name="type" id="changetype-all" checked="checked">
-  <label for="changetype-all">All</label>
-
-  <input type="radio" name="type" id="changetype-establishment">
-  <label for="changetype-establishment">Establishments</label>
-
-  <input type="radio" name="type" id="changetype-address">
-  <label for="changetype-address">Addresses</label>
-
-  <input type="radio" name="type" id="changetype-geocode">
-  <label for="changetype-geocode">Geocodes</label>
+<div id="wrapper" class="container">
+    <div id="map_container">
+    	<div id="map"></div>
+    </div>
+	<div class="row">
+		<div class="col-md-12">
+			<input id="pac-input" class="col-md-6 controls" type="text"
+			    placeholder="Enter a location">
+			<!-- <div id="type-selector" class="col-md-5 controls">
+				<input type="radio" name="type" id="changetype-all" checked="checked">
+			  	<label for="changetype-all">All</label>
+			  	<input type="radio" name="type" id="changetype-establishment">
+			  	<label for="changetype-establishment">Establishments</label>
+			  	<input type="radio" name="type" id="changetype-address">
+			  	<label for="changetype-address">Addresses</label>
+			  	<input type="radio" name="type" id="changetype-geocode">
+			  	<label for="changetype-geocode">Geocodes</label>
+			</div> -->
+		</div>
+    </div>
 </div>
-<div id="map"></div>
 
 <script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initMap"
     async defer></script>
@@ -24,18 +28,15 @@
     var madisonPos = {lat: 43.0667, lng: -89.4000};
     var map = new google.maps.Map(document.getElementById('map'), {
       center: madisonPos,
-      zoom: 8
+		zoom: 8
     });
     var input = /** @type {!HTMLInputElement} */(
         document.getElementById('pac-input'));
-
-    var types = document.getElementById('type-selector');
+    //var types = document.getElementById('type-selector');
     map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-    map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
-
+    //map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
     var autocomplete = new google.maps.places.Autocomplete(input);
     autocomplete.bindTo('bounds', map);
-
     var infowindow = new google.maps.InfoWindow({
       content: "contentString"
     });
@@ -45,18 +46,15 @@
       position: madisonPos,
       title: 'Madison WI'
     });
-
-    var markerApt = new google.maps.Marker({
-      map: map,
-      anchorPoint: new google.maps.Point(0, -29),
-      position: {lat: 43.1667, lng: -89.4000},
-      title: 'APT'
-    });
-
+    // var markerApt = new google.maps.Marker({
+//       map: map,
+//       anchorPoint: new google.maps.Point(0, -29),
+//       position: {lat: 43.1667, lng: -89.4000},
+//       title: 'APT'
+//     });
     marker.addListener('click', function() {
       infowindow.open(map, marker);
     });
-
     autocomplete.addListener('place_changed', function() {
       infowindow.close();
       marker.setVisible(false);
@@ -65,7 +63,6 @@
         window.alert("Autocomplete's returned place contains no geometry");
         return;
       }
-
       // If the place has a geometry, then present it on a map.
       if (place.geometry.viewport) {
         map.fitBounds(place.geometry.viewport);
@@ -82,7 +79,6 @@
       }));
       marker.setPosition(place.geometry.location);
       marker.setVisible(true);
-
       var address = '';
       if (place.address_components) {
         address = [
@@ -94,7 +90,6 @@
         infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
         infowindow.open(map, marker);
       });
-
     // Sets a listener on a radio button to change the filter type on Places
     // Autocomplete.
     function setupClickListener(id, types) {
@@ -103,10 +98,9 @@
         autocomplete.setTypes(types);
       });
     }
-
-    setupClickListener('changetype-all', []);
-    setupClickListener('changetype-address', ['address']);
-    setupClickListener('changetype-establishment', ['establishment']);
-    setupClickListener('changetype-geocode', ['geocode']);
+    // setupClickListener('changetype-all', []);
+//     setupClickListener('changetype-address', ['address']);
+//     setupClickListener('changetype-establishment', ['establishment']);
+//     setupClickListener('changetype-geocode', ['geocode']);
   }
 </script>
