--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -1,22 +1,12 @@
 <% provide(:title, "Home") %>
-<div id="wrapper" class="container">
-    <div id="map_container">
-    	<div id="map"></div>
-    </div>
+<div class="container">
+	<div class="map_container col-md-12"  id="map"> 
+		<div class="col-md-3" id="details"></div>
+	</div>
 	<div class="row">
-		<div class="col-md-12">
-			<input id="pac-input" class="col-md-6 controls" type="text"
+		<div class="col-md-9">
+			<input id="pac-input" class="col-md-6 form-control" type="text"
 			    placeholder="Enter a location">
-			<!-- <div id="type-selector" class="col-md-5 controls">
-				<input type="radio" name="type" id="changetype-all" checked="checked">
-			  	<label for="changetype-all">All</label>
-			  	<input type="radio" name="type" id="changetype-establishment">
-			  	<label for="changetype-establishment">Establishments</label>
-			  	<input type="radio" name="type" id="changetype-address">
-			  	<label for="changetype-address">Addresses</label>
-			  	<input type="radio" name="type" id="changetype-geocode">
-			  	<label for="changetype-geocode">Geocodes</label>
-			</div> -->
 		</div>
     </div>
 </div>
