--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,9 +11,11 @@
 }
 
 .map_container {
+	position: absolute;
 	padding: 0;
   	width: 100%;
   	height: 100%;
+	z-index: -1;
 }
 
 html, body {
@@ -37,4 +39,21 @@ html, body {
 
 #pac-input:focus {
   border-color: #4d90fe;
+}
+
+.pacbtn {
+	position: absolute;
+    margin-top: 10px;
+	z-index: 0;
+	align: left;
+}
+
+#details
+{
+	position: absolute;
+	height: 100%;
+	width: 300px;
+	z-index: 1;
+	float: right;
+	background-color: black;
 }
