--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -1,12 +1,18 @@
 <% provide(:title, "Home") %>
 <div class="container">
-	<div class="map_container col-md-12"  id="map"> 
-		<div class="col-md-3" id="details"></div>
+	<div class="map_container col-md-12"  id="map">
+		<div id="details"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-9">
+		<div class="col-md-6">
 			<input id="pac-input" class="col-md-6 form-control" type="text"
 			    placeholder="Enter a location">
+		</div>
+		<div class="col-md-1">
+			<button type="button" class="btn btn-primary pacbtn">Login</button>
+		</div>
+		<div class="col-md-1">
+			<button type="button" class="btn btn-primary pacbtn">Signup</button>
 		</div>
     </div>
 </div>
