--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,7 +15,7 @@
 	padding: 0;
   	width: 100%;
   	height: 100%;
-	z-index: -1;
+	z-index: 0;
 }
 
 html, body {
@@ -26,6 +26,7 @@ html, body {
 }
 
 #pac-input {
+  position: absolute;
   background-color: #fff;
   font-family: Roboto;
   font-size: 15px;
@@ -35,6 +36,7 @@ html, body {
   text-overflow: ellipsis;
   width: 300px;
   margin-top: 10px;
+  z-index:0;
 }
 
 #pac-input:focus {
@@ -53,7 +55,7 @@ html, body {
 	position: absolute;
 	height: 100%;
 	width: 300px;
-	z-index: 1;
+	z-index: 0;
 	float: right;
 	background-color: black;
 }
