--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -5,7 +5,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-6">
-			<input id="pac-input" class="col-md-6 form-control" type="text"
+			<input id="pac-input" class="col-md-6 controls form-control" type="text"
 			    placeholder="Enter a location">
 		</div>
 		<div class="col-md-1">
