--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,12 +50,28 @@ html, body {
 	align: left;
 }
 
-#details
-{
-	position: absolute;
-	height: 100%;
-	width: 300px;
-	z-index: 0;
-	float: right;
-	background-color: black;
+/*Modal*/
+.modal.fade:not(.in).right .modal-dialog {
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+}
+
+.modal-body {
+    overflow-y:auto;
+}
+.modal-dialog-details{
+  width: 30%;
+  height: 100%;
+  overflow-y:auto;
+  padding: 0;
+  float: right;
+  margin: 0;
+}
+.modal-content{
+    width: 100%;
+    height:100%;
+    overflow-y:auto;
+    margin: 0;
+    top: 0;
+    left: 0;
 }
