--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, "Home") %>
 <div class="container">
 	<div class="map_container col-md-12"  id="map">
-		<div id="details"></div>
 	</div>
 	<div class="row">
 		<div class="col-md-6">
@@ -9,13 +8,98 @@
 			    placeholder="Enter a location">
 		</div>
 		<div class="col-md-1">
-			<button type="button" class="btn btn-primary pacbtn">Login</button>
+			<a class='btn btn-primary pacbtn' data-toggle="modal" 
+				data-direction='right' data-target="#loginModal">Login</a>
 		</div>
 		<div class="col-md-1">
-			<button type="button" class="btn btn-primary pacbtn">Signup</button>
+			<a class='btn btn-primary pacbtn' data-toggle="modal" 
+				data-direction='right' data-target="#signupModal">Signup</a>
 		</div>
     </div>
 </div>
+
+<!-- Modal details-->
+<div id="detailsModal" class="modal fade right" role="dialog">
+  <div class="modal-dialog modal-dialog-details">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--login modal-->
+<div id="loginModal" class="modal fade" role="dialog">
+	<div class="modal-dialog">
+    	<div class="modal-content">    
+       	 	<!-- Header Section -->
+        	<div class="modal-header">
+		    	<a href="#" class="pull-right" data-dismiss="modal">×</a>
+       	 	 	<h3>Please sign in</h3>
+			</div>
+       	 	<!-- Body Section -->
+			<div class="modal-body">
+          		<form class="form col-md-10">
+	         		<input type="text" class="form-control input-lg" placeholder="Email" required autofocus />
+					<br />
+					<input type="password" class="form-control input-lg" placeholder="Password" required />
+					<label class="checkbox"> <input type="checkbox"
+	                	value="remember-me" /> Remember me
+					</label>        
+				<button class="btn btn-primary btn-lg btn-block">Sign In</button>
+          	</form>
+       </div>
+       <!-- Footer Section -->
+       <div class="modal-footer">
+          <div class="col-md-12">
+             <span class="pull-left"><a href="#">Forgot Password?</a></span>
+             <span><a href="#">Register</a></span>
+          </div>
+       </div>
+     </div>
+  </div>
+</div>
+
+<!--signup modal-->
+<div id="signupModal" class="modal fade" role="dialog">
+	<div class="modal-dialog">
+    	<div class="modal-content">    
+       	 	<!-- Header Section -->
+        	<div class="modal-header">
+		    	<a href="#" class="pull-right" data-dismiss="modal">×</a>
+       	 	 	<h3>Sign Up</h3>
+			</div>
+       	 	<!-- Body Section -->
+			<div class="modal-body">
+          		<form class="form col-md-10">
+					<label class="control-label"  for="username">Username</label>
+	         		<input type="text" class="form-control input-lg" required autofocus />
+					<br />
+					<label class="control-label"  for="email">email</label>
+	         		<input type="text" class="form-control input-lg" required autofocus />
+					<br />
+					<label class="control-label"  for="password1">Password</label>
+					<input type="password" class="form-control input-lg" required />
+					<br />
+					<label class="control-label"  for="password2">Confirmation</label>
+					<input type="password" class="form-control input-lg" required />
+					<br />
+					<button class="btn btn-primary btn-lg btn-block">Sign Up</button>
+          	</form>
+       </div>
+     </div>
+  </div>
+</div>
+
 
 <script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initMap"
     async defer></script>
@@ -28,7 +112,6 @@
     });
     var input = /** @type {!HTMLInputElement} */(
         document.getElementById('pac-input'));
-    //var types = document.getElementById('type-selector');
     map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
     //map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
     var autocomplete = new google.maps.places.Autocomplete(input);
@@ -42,12 +125,6 @@
       position: madisonPos,
       title: 'Madison WI'
     });
-    // var markerApt = new google.maps.Marker({
-//       map: map,
-//       anchorPoint: new google.maps.Point(0, -29),
-//       position: {lat: 43.1667, lng: -89.4000},
-//       title: 'APT'
-//     });
     marker.addListener('click', function() {
       infowindow.open(map, marker);
     });
@@ -94,9 +171,5 @@
         autocomplete.setTypes(types);
       });
     }
-    // setupClickListener('changetype-all', []);
-//     setupClickListener('changetype-address', ['address']);
-//     setupClickListener('changetype-establishment', ['establishment']);
-//     setupClickListener('changetype-geocode', ['geocode']);
   }
 </script>
