--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
   <%= render 'layouts/shim'%>
 </head>
 <body>
-
-<%= yield %>
-
+	<% flash.each do |message_type, message| %>
+	        <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %>
+	<%= yield %>
+	<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
